# AMDOX

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierrc  2.txt  CONTRIBUTING.md  Devyani.txt  Dockerfile  Hi My name is Devyani.txt  README.md  SECURITY.md  commitlint.config.js  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  dummy.txt  eslint.config.mjs  lighthouserc.js  nest-cli.json  next-env.d.ts  package-lock.json  package.json  sr.txt  task.md  tsconfig.build.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  db-migration.yml  deploy.yml  release.yml  security-scan.yml  security.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/ml-service/: Dockerfile  pyproject.toml  requirements.txt
apps/ml-service/app/: __init__.py  config.py  main.py
apps/ml-service/app/models/: __init__.py  lstm_model.py  model_registry.py  prophet_model.py
apps/ml-service/app/routers/: __init__.py  metrics.py  models.py  predict.py  train.py
apps/ml-service/app/services/: __init__.py  prediction_service.py  training_service.py
apps/ml-service/app/utils/: __init__.py  data_loader.py
apps/ml-service/tests/: __init__.py  test_lstm_model.py  test_prophet_model.py  test_services.py
apps/test/: jest-e2e.json
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
charts/amdox-erp/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/helm/: Chart.yaml  values.yaml
docs/: API_DOCS.md  ARCHITECTURE.md  DEPLOYMENT.md  azure-ad-integration.md  jwt-rotation-strategy.md
docs/adr/: ADR-001-monolith-over-microservices.md  ADR-002-postgresql-over-mongodb.md  ADR-003-kubernetes-over-serverless.md  ADR-004-prophet-lstm-forecasting.md  ADR-005-outbox-pattern-events.md
docs/performance/: bottleneck-report.md  database-optimization.md
docs/security/: incident-response.md  isms-policy.md
k8s/: namespaces.yaml  rbac.yaml
k8s/istio/: destinationrule.yaml  serviceentry.yaml  virtualservice.yaml
keycloak/: azure-ad-integration.md  jwt-rotation-strategy.md  realm-config.json  realm-export.json
observability/: docker-compose.observability.yml
observability/jaeger/: jaeger-config.yaml
observability/loki/: loki-config.yaml
observability/otel/: instrumentation.ts  otel-collector-config.yaml
observability/prometheus/: alert-rules.yml  prometheus.yml
observability/runbooks/: error-spikes.md  (+1 more)
prisma/: schema.prisma  seed.ts
src/: app.module.ts  main.ts
terraform/: main.tf  variables.tf
test/: jest-e2e.json
(+184 files in other folders)
