[project]
name = "amdox-ml-service"
version = "1.0.0"
description = "AMDOX ML Service — Demand Forecasting with Prophet & LSTM"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AMDOX Team" }]

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-multipart>=0.0.20",
    "numpy>=2.2.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "prophet>=1.1.0,<2.0.0",
    "torch>=2.5.0,<3.0.0",
    "mlflow>=2.19.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "redis>=5.2.0,<6.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "structlog>=24.4.0",
    "python-json-logger>=3.2.0",
    "holidays>=0.63",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
